[gd_scene load_steps=7 format=3 uid="uid://dekk263ylysyx"]

[ext_resource type="FontFile" uid="uid://brk4uxm3tjto7" path="res://assets/fonts/PolisRegular.otf" id="1_bixy4"]
[ext_resource type="Script" path="res://scripts/gui_saves.gd" id="1_c1jgo"]
[ext_resource type="FontFile" uid="uid://du68wj6r6jpyj" path="res://assets/fonts/libel-suit-rg.otf" id="2_p65p0"]
[ext_resource type="Theme" uid="uid://u6n8twqhjh4f" path="res://gui/theme_tertiarymenubutton.tres" id="4_lt4tw"]

[sub_resource type="LabelSettings" id="LabelSettings_31qkv"]
font = ExtResource("1_bixy4")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dlmtb"]
bg_color = Color(0.338871, 0.434766, 0.209645, 1)

[node name="gui_saves" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c1jgo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 350.0
offset_right = -379.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0885599, 0.0885599, 0.0885599, 1)

[node name="saves_panel" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 383.0
offset_top = 37.0
offset_right = 864.0
offset_bottom = 694.0

[node name="Saves" type="VBoxContainer" parent="saves_panel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="lbl_no_saves" type="Label" parent="saves_panel/Saves"]
layout_mode = 2
theme_override_colors/font_color = Color(0.560955, 0.560955, 0.560955, 1)
theme_override_fonts/font = ExtResource("2_p65p0")
text = "no saves available"
horizontal_alignment = 1

[node name="right_panel" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 913.0
offset_top = 34.0
offset_right = -14.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="right_panel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="txt_save_name" type="LineEdit" parent="right_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 32
text = "SaveName"
max_length = 30
select_all_on_focus = true
caret_blink = true

[node name="lbl_day" type="Label" parent="right_panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 20
text = "day"

[node name="lbl_save_path" type="Label" parent="right_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.544974, 0.544974, 0.544974, 1)
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 18
text = "filename"

[node name="GridContainer" type="GridContainer" parent="right_panel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="lbl_last_played" type="Label" parent="right_panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 16
text = "last played"

[node name="lbl_date_last_played" type="Label" parent="right_panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 16
text = "XX/XX/XXXX XX:XX"
horizontal_alignment = 2

[node name="lbl_created" type="Label" parent="right_panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 16
text = "created"

[node name="lbl_date_created" type="Label" parent="right_panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 16
text = "XX/XX/XXXX XX:XX"
horizontal_alignment = 2

[node name="btn_delete" type="Button" parent="right_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_p65p0")
theme_override_font_sizes/font_size = 18
disabled = true
text = "delete save"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 182.0
offset_right = 229.0
offset_bottom = 239.0
text = "saves"
label_settings = SubResource("LabelSettings_31qkv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = -69.0
offset_right = 254.0
offset_bottom = 193.0
grow_vertical = 2

[node name="btn_new" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_lt4tw")
text = "new game"

[node name="btn_open_saves" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_lt4tw")
text = "open save folder"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_lt4tw")
text = "back"

[node name="btn_load" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
offset_left = 931.0
offset_top = 604.0
offset_right = 1248.0
offset_bottom = 684.0
focus_mode = 0
theme = ExtResource("4_lt4tw")
theme_override_styles/normal = SubResource("StyleBoxFlat_dlmtb")
disabled = true
text = "play"

[connection signal="pressed" from="right_panel/VBoxContainer/btn_delete" to="." method="_on_btn_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_new" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_open_saves" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_open_saves" to="." method="_on_btn_open_saves_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="btn_load" to="." method="_on_btn_load_pressed"]
